--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
-                                                    </li>
-										            <li>
                                 <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
@@ -98,7 +96,7 @@
 							<div class="col-8 col-12-medium imp-medium">
 								<section>
 									<h2>About</h2>
-                                PhD candidate in Intelligent Systems Engineering track in School of Informatics, Computing, and Engineering at Indiana University Bloomington. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
+                                    PhD candidate in <a href="https://     engineering.indiana.edu/">Intelligent Systems Engineering</a> track in <a href="https://luddy.indiana.edu/">School of Informatics, Computing, and Engineering</a> at <a href="https://www.indiana.edu/">Indiana University Bloomington</a>. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
                                 <br>
                                 <br>
                                 I was fortunate enough to work as an applied scientist intern at Amazon Lab126's Audio Technology group and as an engineering intern at Qualcomm's Audio Algorithms group. 
