--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 							<div class="col-8 col-12-medium imp-medium">
 								<section>
 									<h2>About</h2>
-                                    PhD candidate in <a href="https://     engineering.indiana.edu/">Intelligent Systems Engineering</a> track in <a href="https://luddy.indiana.edu/">School of Informatics, Computing, and Engineering</a> at <a href="https://www.indiana.edu/">Indiana University Bloomington</a>. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor Prof. Minje Kim. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
+                                    PhD candidate in <a href="https://     engineering.indiana.edu/">Intelligent Systems Engineering</a> track in <a href="https://luddy.indiana.edu/">School of Informatics, Computing, and Engineering</a> at <a href="https://www.indiana.edu/">Indiana University Bloomington</a>. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor <a href="https://saige.sice.indiana.edu/">Prof. Minje Kim</a>. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
                                 <br>
                                 <br>
-                                I was fortunate enough to work as an applied scientist intern at Amazon Lab126's Audio Technology group and as an engineering intern at Qualcomm's Audio Algorithms group. 
+                                I was fortunate enough to work as an applied scientist intern at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a>'s Audio Technology group and as an engineering intern at Qualcomm's Audio Algorithms group. 
                                 <br>
                                 <br>
                                 I graduated with a BS in Physics from the University of Illinois at Urbana-Champaign. 
@@ -121,7 +121,7 @@
                                         06/02/2021: A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
                                         </li>
                                         <li>
-                                        10/20/2020: Accepted return offer for Applied Scientist internship at Amazon Lab126 for Summer 2021!
+                                            10/20/2020: Accepted return offer for Applied Scientist internship at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a> for Summer 2021!
                                         </li>
                                         <li>
                                             05/05/2020: Presented a virtual oral presentation of our Boosted Locality Hashing paper for ICASSP 2020. <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[session]</a> <a href="https://ieeexplore.ieee.org/document/9053052">[paper]</a>
@@ -130,10 +130,10 @@
                                         01/24/2020: Our paper, Boosted Locality Sensitive Hashing, was accepted for publication in ICASSP 2020 and nominated as the Best Student Paper.
                                         </li>
                                         <li>
-                                        01/23/2020: Applied scientist internship offer accepted at Amazon Lab126 for Summer 2020.
+                                            01/23/2020: Applied scientist internship offer accepted at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a> for Summer 2020.
                                         </li>
                                         <li>
-                                        08/16/2019: I concluded my exciting internship at Qualcomm for Summer 2019. It was an amazing experience collaborating with the Audio Algorithms team working on nonlinear echo cancellation.
+                                            08/16/2019: I concluded my exciting internship at <a href="https://www.qualcomm.com/">Qualcomm</a> for Summer 2019. It was an amazing experience collaborating with the Audio Algorithms team working on nonlinear echo cancellation.
                                         </li>
                                         <li>
                                         05/17/2019: Attended ICASSP 2019 in Brighton, UK. Presented on bitwise recurrent neural networks. <a href="icassp2019postercopy.pdf">[poster]</a> <a href="https://ieeexplore.ieee.org/abstract/document/8682595">[paper]</a>
