--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     PhD candidate in <a href="https://     engineering.indiana.edu/">Intelligent Systems Engineering</a> track in <a href="https://luddy.indiana.edu/">School of Informatics, Computing, and Engineering</a> at <a href="https://www.indiana.edu/">Indiana University Bloomington</a>. I investigate efficient machine learning and deep learning solutions for audio processing problems with my advisor <a href="https://saige.sice.indiana.edu/">Prof. Minje Kim</a>. My current research focuses on novel modes of compression for source separation applications through personalization and scalable learning for practical deployment onto resource-constrained devices. Previously, I worked on various modes of compression including extreme quantization, hashing, and pruning. 
                                 <br>
                                 <br>
-                                I was fortunate enough to work as an applied scientist intern at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a>'s Audio Technology group and as an engineering intern at Qualcomm's Audio Algorithms group. 
+                                I was fortunate enough to work as an applied scientist intern at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a>'s Audio Technology group and as an engineering intern at <a href="https://www.qualcomm.com/">Qualcomm</a>'s Audio Algorithms group. 
                                 <br>
                                 <br>
                                 I graduated with a BS in Physics from the University of Illinois at Urbana-Champaign. 
