--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 I was fortunate enough to work as an applied scientist intern at <a href="https://amazon.jobs/en/teams/lab126/">Amazon Lab126</a>'s Audio Technology group and as an engineering intern at <a href="https://www.qualcomm.com/">Qualcomm</a>'s Audio Algorithms group. 
                                 <br>
                                 <br>
-                                I graduated with a BS in Physics from the University of Illinois at Urbana-Champaign. 
+                                I graduated with a BS in Physics from the <a href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a>. 
                                 <br>
                                 <br>
                                 Please check out my <a href="New_CV_922.pdf">CV</a> for more information. 
