--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@ Purification</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 20
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Haici Yang, Minje Kim, "<a href="https://ieeexplore.ieee.org/document/9053052">Boosted Locality Sensitive Hashing: Discriminative Binary Codes For Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Barcelona, Spain, May 4-8, 2020. [<a href="https://saige.sice.indiana.edu/research-projects/bwss-blsh/">Demo</a>, <a
-                                                href="https://github.com/sunwookimiub/BLSH">Code</a>, <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">[Presentation]</a>]
+                                                href="https://github.com/sunwookimiub/BLSH">Code</a>, <a href="https://www.dropbox.com/s/3lnck8m2i1puu0a/ICASSP_20_SUNWOO.mp4?dl=0">Presentation</a>]
 
                                             <p><strong>[Nominated as the Best Student Paper]</strong></p>
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a
-                                                href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">[Poster]</a>]
+                                                href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">Poster</a>]
                                         </li>
                                     </ul>
 								</section>
