--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Sunwoo Kim</a></h1>
-									<!--<nav id="nav">
+									<h1><a id="logo">Sunwoo Kim</a></h1>
+									<!--<h1><a href="index.html" id="logo">Sunwoo Kim</a></h1>
+									<nav id="nav">
 										<a href="index.html" class="current-page-item">Homepage</a>
 										<a href="publications.html">Publications</a>
 										<a href="cv.html">CV</a>
