Demo added for BGRU

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Purification</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 20
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a
-                                                href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">Poster</a>]
+                                                                                             href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">Poster</a>, <a href="https://www.youtube.com/watch?v=EjS1paV2Cnw">Demo</a>]
                                         </li>
                                     </ul>
 								</section>
