--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 Please check out my <a href="New_CV_922.pdf">CV</a> for more information. 
                                 <br>
                                 <br>
-                                In my leisure time, I mostly spend time with my two dogs, Mochi and Oliver, going to nearby parks or nature trails, and I also enjoy watching soccer. Started getting into playing tennis recently!
+                                In my leisure time, I mostly spend time with my two dogs and hiking at nearby parks or nature trails. 
                                 </section>
 
 								<section>
