--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                                 <a href="https://www.linkedin.com/in/sunwookimiub" title="LinkedIn">
                                     <i style="font-size:48px" class="fa">&#xf08c;</i>
                                 </a>
+                                <a href="https://github.com/kimsunwiub" title="Github">
+                                <i style="font-size:48px" class="fa">&#xf09b;</i>
+                                </a>
                                 <a href="https://scholar.google.com/citations?hl=en&user=F31Tky0AAAAJ" title="GoogleScholar">
                                     <i style="font-size:48px" class="fa">&#xf0d4;</i>
                                 </a>
