--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<h2>News</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                        07/14/2021: Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021. <a href="https://arxiv.org/pdf/2105.03544.pdf">[paper]</a>
+                                            07/14/2021: Our paper, Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation, was accepted for publication in WASPAA 2021. <a href="https://share.descript.com/view/LX2kLyPs4x3">[session]</a> <a href="https://arxiv.org/pdf/2105.03544.pdf">[paper]</a>
                                         </li>
                                         <li>
                                         06/02/2021: A paper I co-authored, Personalized speech enhancement through self-supervised data augmentation and purification, was accepted for publication in Interspeech 2021.
