--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 									<h2>Publications</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                            <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2105.03544.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, Oct 17-20, 2021. [<a href="https://github.com/kimsunwiub/PSE_ZeroShot_KD">Code</a>]
+                                            <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2105.03544.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, Oct 17-20, 2021. [<a href="https://saige.sice.indiana.edu/research-projects/kd-pse/">[Demo and Presentation]</a>, <a href="https://github.com/kimsunwiub/PSE_ZeroShot_KD">Code</a>]
                                         </li>
                                         <li>
                                             Aswin Sivaraman, <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2104.02018.pdf">Personalized Speech Enhancement through Self‑Supervised Data Augmentation and
@@ -163,7 +163,7 @@ Purification</a>," in <i>Interspeech</i>, Brno, Czech Republic, Aug 30-Sep 3, 20
                                         </li>
                                         <li>
                                             <u>Sunwoo Kim</u>, Mrinmoy Maity, Minje Kim, "<a href="https://ieeexplore.ieee.org/abstract/document/8682595">Incremental Binarization On Recurrent Neural Networks For Single-Channel Source Separation</a>," in Proceedings of the <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, Brighton, UK, May 12-17, 2019. [<a href="https://www.kimsunwoo.com/bgru.html">Demo</a>, <a
-                                                                                             href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">Poster</a>, <a href="https://www.youtube.com/watch?v=EjS1paV2Cnw">Demo</a>]
+                                                                                             href="https://github.com/sunwookimiub/BGRU">Code</a>, <a href="icassp2019postercopy.pdf">Poster</a>]
                                         </li>
                                     </ul>
 								</section>
