--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 									<h2>Publications</h2>
                                     <ul class="link-list-news">
                                         <li>
-                                            <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2105.03544.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, Oct 17-20, 2021. [<a href="https://saige.sice.indiana.edu/research-projects/kd-pse/">[Demo and Presentation]</a>, <a href="https://github.com/kimsunwiub/PSE_ZeroShot_KD">Code</a>]
+                                            <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2105.03544.pdf">Test-Time Adaptation Toward Personalized Speech Enhancement: Zero-Shot Learning with Knowledge Distillation</a>," in <i>IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, Oct 17-20, 2021. [<a href="https://saige.sice.indiana.edu/research-projects/kd-pse/">Demo and Presentation</a>, <a href="https://github.com/kimsunwiub/PSE_ZeroShot_KD">Code</a>]
                                         </li>
                                         <li>
                                             Aswin Sivaraman, <u>Sunwoo Kim</u>, Minje Kim, "<a href="https://arxiv.org/pdf/2104.02018.pdf">Personalized Speech Enhancement through Self‑Supervised Data Augmentation and
